New JDK version implemented (25) and small post function added
switched from JDK 17 -> JDK 25 for optimizations regarding thread consumption and concurrency. Regarding posts, should optimize the amount of queries made for retrieving all posts and users